<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verifica_pontos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.greencode.naturaconsciente.VerificaPontosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_premio_atual"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_desconto_recebido"
        android:textSize="19sp"
        android:layout_margin="5dp"
        android:id="@+id/tvDesconto" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbProgresso"
        android:progress="10"
        android:max="100" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_qtd_pontos"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="15dp"
        android:id="@+id/tvPontos" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_resgatar_premio"
        android:textSize="17sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_voltar"
        android:textSize="17sp"
        android:onClick="voltarParaMenuCliente"/>
</LinearLayout>
