<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selecionar_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.greencode.naturaconsciente.SelecionaPerfilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_tipo_de_perfil"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_cliente_natura"
        android:textSize="17sp"
        android:layout_margin="5dp"
        android:id="@+id/btnCliente"
        android:onClick="chamarLoginCliente"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_consultor_natura"
        android:textSize="17sp"
        android:layout_margin="5dp"
        android:id="@+id/btnConsultor"
        android:onClick="chamarLoginConsultor" />
</LinearLayout>
