<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_consultor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.greencode.naturaconsciente.LoginConsultorActivity"
    android:background="@drawable/fundo_login">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="137dp"
        android:layout_gravity="center"
        android:background="@drawable/natura_logo"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_matricula"
        android:textSize="17sp"
        android:textColor="@color/textBranco"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMatricula"
        android:textColor="@color/textBranco"
        android:background="@drawable/edit_text"
        />

    <TextView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_senha"
        android:textSize="17sp"
        android:textColor="@color/textBranco"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtSenha"
        android:textColor="@color/textBranco"
        android:background="@drawable/edit_text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/str_btn_entrar"
        android:id="@+id/btnEntrar"
        android:onClick="chamarMenuConsultor"/>

    <Button
        android:text="@string/str_btn_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="voltarr"/>
</LinearLayout>
